--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="menu">
                 <ul class="lan">
                     <li class="show"><i class="xi-globus"></i><span class="main">한국어 <i class="xi-caret-down"></i></span></li>
-                    <li class="ch">&nbsp;한국어</li>
+                    <!-- <li class="ch">&nbsp;한국어</li> -->
                     <li class="ch">&nbsp;영어</li>
                 </ul>
                 <div class="signIn">
@@ -196,7 +196,7 @@
                     </div>
                     <ul class="lan">
                         <li class="show"><i class="xi-globus"></i><span class="main">한국어 <i class="xi-caret-down"></i></span></li>
-                        <li class="ch">&nbsp;한국어</li>
+                        <!-- <li class="ch">&nbsp;한국어</li> -->
                         <li class="ch">&nbsp;영어</li>
                     </ul>
                     <div class="copyright">
